[project]
name = "langchain-schedule"
version = "0.1.0"
description = ""
authors = [
    {name = "Philipp Comans",email = "philipp.comans@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.19",
    "apscheduler>=3.10.4",
    "python-dateutil>=2.8.2",
    "langchain-openai>=0.0.5",
    "openai>=1.12.0"
]

[tool.poetry]
packages = [{include = "langchain_schedule", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
